# darwin-timeout

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  build.rs
.cargo/: config.toml
.githooks/: pre-commit
.github/: copilot-instructions.md
.github/workflows/: ci.yml  homebrew.yml  release.yml  verify.yml
benchmarks/: fast_cmd.json  final_1s.json  kill_after.json  startup_1.json  timeout_100ms.json  timeout_1s.json
completions/: procguard.bash  procguard.fish  procguard.zsh  timeout.bash  timeout.fish  timeout.zsh
docs/: FUZZING.md  VERIFICATION.md  json-output.md  resource-limits.md
docs/benchmarks/: RESULTS.md  json_overhead.json  machine_specs.json  precision_1s.json  retry_overhead.json  run1_startup.json  run2_startup.json  run3_startup.json  run4_startup.json  run5_startup.json
fuzz/: Cargo.toml
fuzz/fuzz_targets/: parse_args.rs  parse_duration.rs  parse_mem_limit.rs  parse_signal.rs
scripts/: benchmark.sh  build-universal.sh  pre-commit  pre-push  setup-hooks.sh  verify-all.sh
src/: alloc.rs  allocator.rs  args.rs  duration.rs  error.rs  io.rs  lib.rs  main.rs  panic.rs  proc_info.rs  process.rs  rlimit.rs  runner.rs  signal.rs  sync.rs  throttle.rs  time_math.rs  wait.rs
tests/: benchmarks.rs  integration.rs  library_api.rs  proptest.rs
