[package]
name = "darwin-timeout"
version = "1.0.0"
edition = "2024"
rust-version = "1.90"
authors = ["denispol"]
description = "Run a command with a time limit (GNU timeout clone for Darwin/Apple platforms)"
license = "MIT"
repository = "https://github.com/denispol/darwin-timeout"
keywords = ["cli", "timeout", "process", "macos", "darwin"]
categories = ["command-line-utilities"]

[dependencies]
# Direct libc for signal handling, process groups, kqueue
libc = "0.2.177"

[dev-dependencies]
assert_cmd = "2.0.17"
predicates = "3.1.3"

[profile.release]
opt-level = "z"         # size-optimized (perf impact minimal for this CLI)
lto = "fat"             # cross-crate optimization
codegen-units = 1       # single unit = better optimization
panic = "abort"         # no unwind tables
strip = "symbols"       # strip debug symbols
overflow-checks = false # no runtime overflow checks

# Faster dev builds - skip optimizations entirely
[profile.dev]
opt-level = 0
debug = true

# Tests with minimal optimization for reasonable speed
[profile.test]
opt-level = 1

# Benchmarking with full optimizations
[profile.bench]
lto = true
opt-level = 3

[[bin]]
name = "timeout"
path = "src/main.rs"

[features]
default = []
