[package]
name = "darwin-timeout"
version = "1.4.0"
edition = "2024"
rust-version = "1.91"
authors = ["denispol"]
description = "Run a command with a time limit (GNU timeout clone for Darwin/Apple platforms)"
license = "MIT"
repository = "https://github.com/denispol/darwin-timeout"
keywords = ["cli", "timeout", "process", "macos", "darwin"]
categories = ["command-line-utilities"]

[dependencies]
# Direct libc for signal handling, process groups, kqueue
# default-features = false for no_std compatibility
libc = { version = "0.2.177", default-features = false }

[dev-dependencies]
assert_cmd = "2.0.17"
predicates = "3.1.3"

[profile.release]
opt-level = "z"         # size-optimized (perf impact minimal for this CLI)
lto = "fat"             # cross-crate optimization
codegen-units = 1       # single unit = better optimization
panic = "abort"         # no unwind tables
strip = "symbols"       # strip debug symbols
overflow-checks = false # no runtime overflow checks

# Faster dev builds - skip optimizations entirely
[profile.dev]
opt-level = 0
debug = true

# Tests with minimal optimization for reasonable speed
[profile.test]
opt-level = 1

# Benchmarking with full optimizations
[profile.bench]
lto = true
opt-level = 3

# Fuzzing profile - optimizations with debug assertions
[profile.fuzz]
inherits = "release"
opt-level = 3
debug-assertions = true
overflow-checks = true

[[bin]]
name = "timeout"
path = "src/main.rs"

[features]
default = []

[lints.rust]
unsafe_op_in_unsafe_fn = "deny"
# New in 1.91: catches raw pointers derived from locals that outlive their source.
# Critical for FFI code where stack pointers could escape to C functions.
dangling_pointers_from_locals = "deny"
# Uplifted in 1.88: prevents null pointer UB in FFI calls expecting non-null args.
invalid_null_arguments = "deny"
# Allow kani cfg for formal verification proofs
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(kani)'] }

[lints.clippy]
# Require SAFETY comments on unsafe blocks - enforces documentation of invariants.
undocumented_unsafe_blocks = "deny"
# Prefer single unsafe ops per block for auditability. Allow-listed in existing
# code where multiple operations share the same invariants (e.g., fcntl sequences,
# sigaction setup). New code should split blocks where possible.
multiple_unsafe_ops_per_block = "warn"
